--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>pair-program-1</groupId>
-    <artifactId>pair-program-1</artifactId>
+    <groupId>logic-koans</groupId>
+    <artifactId>logic-koans</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
